# vncc

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
include/: detector.h  ncc.cuh
launch/: vncc_estimator.launch
msg/: Detection.msg
pre/: bowl.yml  log_19.yml  plate.yml
src/: detector.cu  ncc.cu
src/ros/: vncc_ros.cc
src/vncc_wrapper/: detector.py  example.py
srv/: GetDetections.srv
